# ESP_GTest_Template

./: .gitignore  .gitmodules  CMakeLists.txt  Notice_WIP.md  README.md  node_config.h
.devcontainer/: Dockerfile  devcontainer.json
components/googletest/: CMakeLists.txt
components/googletest/libs/googletest/googletest/include/gtest/: gtest.h
components/idf_cpp_wrapper/: CMakeLists.txt
components/idf_cpp_wrapper/ESP/System/: ChipInfo.cpp  ChipInfo.h
components/idf_cpp_wrapper/Interfaces/System/: IChipInfo.h
components/idf_cpp_wrapper/Mocks/System/: ChipInfoMock.h
components/testClass/: CMakeLists.txt  TestPrintClass.cpp
components/testClass/include/: TestPrintClass.h
components/testClass/unit_tests/: TestPrintClass.test.cpp
main/: CMakeLists.txt  app.cpp
services/vault/: CMakeLists.txt  Vault.cpp
services/vault/include/: Vault.h
services/vault/unit_test/: CMakeLists.txt  vault.test.cpp
unit_tests/: CMakeLists.txt  testrunner.cpp
